refactor main window

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 <body>
 
     <div class="app-container">
-        <h1>Привет! </h1>
-        <p>Ананасики</p>
-        <button id="clickBtn">Нажми меня</button>
+        <p id="date-text"></p>
         <p id="message"></p>
+        <div id="holidays-list"></div>
     </div>
 
     <!-- Подключаем скрипт логики -->
