--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon" href="icons/icon-192.png">
 
     <!-- Цвет темы (влияет на "челку" в новых айфонах) -->
-    <meta name="theme-color" content="#ff4081">
+    <meta name="theme-color" content="#fce4ec">
 </head>
 <body>
 
